# pyment

./: .appveyor.yml  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG  CRIDIT PASSWERD  LICENSE  README.md  README.rst  docstring.py  example.py  example.py.patch  example_javadoc.py.patch  example_numpy.py.patch  example_numpydoc.py.patch  gooddoc.py  pmtools.py  pyment.1  pyment.conf  pyment.py  pyment.txt  pyproject.toml  quote_default.py.patch  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml
doc/: pyment.rst
doc/sphinx/: Makefile  make.bat
doc/sphinx/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pyment.html  pyment_doc.html  search.html  searchindex.js
doc/sphinx/html/_sources/: index.rst.txt  pyment.rst.txt  pyment_doc.rst.txt
doc/sphinx/source/: conf.py  pyment.rst
docs/: conf.py  faq.rst  getting_started.rst  index.rst  modules.rst  pymend.docstring_parser.rst  pymend.rst  requirements.txt
docs/guides/: index.rst  introducing_pymend_to_your_project.rst
docs/usage_and_configuration/: index.rst  the_basics.rst
pymend/: __init__.py  __main__.py  const.py  file_parser.py  files.py  output.py  pymend.py  pymendapp.py  report.py  types.py
pymend/docstring_parser/: __init__.py  attrdoc.py  common.py  epydoc.py  google.py  numpydoc.py  parser.py  rest.py  util.py
pyment/: __init__.py  doc_tools_base.py  docs_tools.py  docstring.py  docstring.py.patch  file_parser.py  google_doc_tools.py  numpy_doc_tools.py  pyment.py  pyment.py.patch  pymentapp.py  sav_docstring.py.patch  tmp  types.py  utils.py
pyment/docstring_parser/: __init__.py  attrdoc.py  common.py  epydoc.py  google.py  numpydoc.py  parser.py  rest.py  util.py
pyment/docstrings/: __init__.py
pyment/docstrings/generators/: __init__.py  numpydoc_generator.py
pyment/docstrings/parsers/: __init__.py  base_parser.py  google_parser.py  manager.py  numpy_parser.py
pyment/docstringssssss/: helpers.py
pyment/docstringssssss/generators/: __init__.py
pyment/docstringssssss/parsers/: base_parser.py  google_parser.py  manager.py  numpy_parser.py
scripts/: pyment
src/: pmtools.py
tests/: __init__.py  docs_already_google.py  docs_already_javadoc.py  docs_already_numpydoc.py  docs_already_reST.py  free_cases.py  issue10.py  issue10.py.patch.expected  issue15.py  issue15.py.patch.expected  issue22.py  issue30.py  issue34.py  issue46.py  issue46.py.patch.expected  issue47.py  issue49.py  issue51.py  issue58.py  issue69.py  issue69.py.patch  issue83.py  issue83.py.patch  issue85.py  issue85.py.patch  issue88.py  issue88.py.patch  issue9.py  issue90.py  issue90.py.patch  issue93.py  issue93.py.patch  issue95.py  issue95.py.patch  issue99.py  issue99.py.patch  origin_test.py  params.py  params.py.patch.google.expected  params.py.patch.javadoc.expected  (+10 more)
tests/data/: origin_test.py
tests/refs/: ast_ref.py  ast_ref.py.patch.numpydoc.expected  docs_already_numpydoc.py  free_cases.py  issue30.py  issue49.py  keyword_only.py  keyword_only.py.patch.numpydoc.expected  module_dot_missing.py.patch.numpydoc.expected  origin_test.py  params.py.patch.numpydoc.expected  positional_only.py  positional_only.py.patch.numpydoc.expected  raises.py  returns.py  returns.py.patch.numpydoc.expected  skip_overload_decorator.py.patch.numpydoc.expected  star_args.py  star_args.py.patch.numpydoc.expected  star_star_kwargs.py  star_star_kwargs.py.patch.numpydoc.expected  yields.py.patch.numpydoc.expected
tests/test_docstring_parser/: test_epydoc.py  test_google.py  test_numpydoc.py  test_parse_from_object.py  test_parser.py  test_rest.py  test_util.py
tests/test_pymend/: __init__.py  test_app.py  test_file_parser.py  test_issues.py  test_numpyoutput.py  test_pymend.py  test_types.py
tests/test_pymend/refs/: ast_ref.py.patch.numpydoc.expected  blank_lines.py  blank_lines.py.patch.numpydoc.expected  class_body.py.patch.numpydoc.expected  comments_after_docstring.py  comments_after_docstring.py.patch.numpydoc.expected  free_cases.py  keyword_only.py  keyword_only.py.patch.numpydoc.expected  module_dot_missing.py  module_dot_missing.py.patch.numpydoc.expected  params.py  params.py.patch.numpydoc.expected  positional_only.py  positional_only.py.patch.numpydoc.expected  quote_default.py  quote_default.py.patch.numpydoc.expected  raises.py  raises.py.patch.numpydoc.expected  returns.py.patch.numpydoc.expected  skip_overload_decorator.py.patch.numpydoc.expected  star_args.py  star_args.py.patch.numpydoc.expected  star_star_kwargs.py  star_star_kwargs.py.patch.numpydoc.expected  yields.py  yields.py.patch.numpydoc.expected
tests/test_pyment/: test_app.py  test_file_parser.py  test_issues.py  test_numpyoutput.py  test_pyment.py  test_types.py
tests/test_pyment/refs/: class_body.py  class_body.py.patch.numpydoc.expected  keyword_only.py  keyword_only.py.patch.numpydoc.expected  module_dot_missing.py  module_dot_missing.py.patch.numpydoc.expected  positional_only.py.patch.numpydoc.expected  raises.py.patch.numpydoc.expected  returns.py  returns.py.patch.numpydoc.expected  skip_overload_decorator.py  star_args.py.patch.numpydoc.expected  star_star_kwargs.py  star_star_kwargs.py.patch.numpydoc.expected  yields.py  yields.py.patch.numpydoc.expected
